# row_level_security_with_python

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  table.sql
src/: batch.py  main.py
src/controller/: controller.py
src/infrastructure/: database.py
src/middleware/: logger.py  logging.yaml
src/model/: app_user.py  log.py  table.py  tenant.py
src/service/: app_user_service.py  health_check_service.py  log_service.py  tenant_service.py
