[tool.poetry]
name = "row-level-security-with-python"
version = "0.1.0"
description = ""
authors = ["shibuiwilliam <shibuiyusuke@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "row_level_security_with_python"}]

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = "^0.100.0"
pydantic = "^2.0.3"
uvicorn = "^0.23.1"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.19"
psycopg = {extras = ["binary"], version = "^3.1.9"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
codespell = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
